[package]
name = "bstarparser"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[main]
name = "main"

[lib]
name = "bstarparser"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]